--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>ired_simulation</name>
-  <version>0.0.0</version>
-  <description>The ired_simulation package</description>
-  <maintainer email="thitipongth@todo.todo">thitipongth</maintainer>
+  <version>1.0.0</version>
+  <description>
+    This package is use for ired simulation.
+    Cr. Turtlebot3
+  </description>
+  <maintainer email="aimslabkmitl@gmail.com">AIMs Lab KMITL</maintainer>
   <license>Apache 2.0</license>
 
   <buildtool_depend>catkin</buildtool_depend>
@@ -11,6 +14,7 @@
   <depend>geometry_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>roscpp</depend>
+  <depend>rospy</depend>
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>tf</depend>
